# online-shop

./: README.md
backend/: .env  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml  shell.py
backend/apps/accounts/: admin.py  backend.py  form.py  manager.py  models.py  tasks.py  tests.py  views.py
backend/apps/core/: manager.py  models.py
backend/apps/home/: admin.py  models.py  signlas.py  tests.py
backend/apps/order/: admin.py  cart.py  models.py  serializer.py
backend/assets/css/: app.css  fonts.css
backend/config/: __init__.py  celery.py  settings.py  urls.py
backend/public/urls/: __init__.py
backend/public/views/: template.py
backend/templates/: footer.html  header.html  package.json  tailwind.config.js
backend/templates/admin/: base_site.html
backend/templates/pages/: verify_successfull.html
backend/templates/public/: 404.html  about.html  blog-detail.html  blog.html  checkout-cart.html  checkout-payment.html  checkout-shipping.html  compare.html  components.html  contact.html  faq.html  forgot-otp.html  forgot-reset.html  forgot.html  how-to-buy.html  index.html  login-otp.html  login-password.html  login.html  maintenance.html  payment-failed.html  payment-success.html  product-detail-no-quantity.html  product-detail-no-reply.html  product-detail-with-tabs.html  product-detail.html  profile-address.html  profile-dashboard.html  profile-edit.html  profile-editpassword.html  profile-favorite-empty.html  profile-favorite.html  profile-notification.html  profile-orders-detail-pending.html  (+10 more)
backend/utils/: catche.py
(+14 files in other folders)
