[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["shahab <shahaab.kabiri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
