[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["shahab <shahaab.kabiri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
python-decouple = "^3.8"
pillow = "^10.3.0"
djangorestframework = "^3.15.1"
celery = "^5.4.0"
redis = "^5.0.4"
rabbitmq = "^0.2.0"
django-jazzmin = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
